# RibonanzaNet2

./: CMakeLists.txt  Dataset.py  Decoder.py  Diffusion.py  Functions.py  LICENSE  Network.py  README.md  bash_for_loop.sh  check_casp16.py  check_gpu_usage.py  check_nans_indataset.py  compare_log.py  compare_w_baseline.py  compile_grid_search.py  compile_grid_search_c1.py  compile_grid_search_casp16.py  compile_grid_search_v2.py  csv_logger.py  diffusion_config.yaml  env.yml  eval_casp15.py  extract_tqdm.py  finetune_3d.py  finetune_C1_contact.py  finetune_bprna.py  finetune_temporal_split.py  finetune_v8.py  fix_big_weights.py  format_sub.py  generate_finetune_configs.py  generate_finetune_configs_c1.py  generate_multinode_configs.py  generate_multinode_configs.sh  generate_multinode_configs_inference.py  get_best_hyperparams.py  inference.py  jax-compare.txt  jax-todo.txt  jax_dataset.py  (+47 more)
configs/: 10M.yaml  benchmark.yaml  drop_DQN.yaml  pairwise.yaml  rnet2_onemill.yaml  tiny.yaml
