[project]
name = "ribonanzanet2"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "flax>=0.10.6",
    "grain>=0.2.9",
    "h5py>=3.13.0",
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "pandas>=2.2.3",
    "polars>=1.30.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
    "ty>=0.0.1a6",
]
torch = [
    "accelerate>=1.7.0",
    "pytorch-ranger>=0.1.1",
    "torch>=2.7.0",
]
